# WARRIOR-Goalkeeper-PC

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  kamera  kamera.cpp  main  main.cpp  segmentasi  segmentasi.cpp  setcam.sh
datacamera/: usb-046d_C922_Pro_Stream_Webcam_5E9FA0EF-video-index0.txt  usb-046d_C922_Pro_Stream_Webcam_7FB19ADF-video-index0.txt  usb-046d_C922_Pro_Stream_Webcam_A9E0566F-video-index0.txt  usb-046d_HD_Webcam_C525_19BFE230-video-index0.txt  usb-046d_HD_Webcam_C525_34BBE640-video-index0.txt  usb-046d_HD_Webcam_C525_34BBE640-video-index0_1.txt  usb-046d_Logitech_Webcam_C930e_D0DC2E9E-video-index0.txt  usb-8SSC20F27068L1GZ9977PKH_Integrated_Camera-video-index0.txt  usb-Quanta_ACER_HD_User_Facing_01.00.00-video-index0.txt  usb-Sonix_Technology_Co.__Ltd._USB_2.0_Camera_SN0179-video-index0.txt
gui/: CMakeLists.txt  KalibrasiKamera.cpp  KalibrasiKamera.h  KalibrasiSegmentasi.h  Makefile  PilihKamera.cpp  PilihKamera.h  cmake_install.cmake
gui/include/: SegmentationUi.hpp
gui/src/: SegmentationUi.cpp
gui/ui/: segmentation_ui.glade
kalibrasi/: bola.txt  gawang_depan.txt  lapangan.txt  musuh.txt  musuh_depan.txt  teman_depan.txt
kalibrasi/encoder/: Makefile  kalibrasiencoder.cpp
kalibrasi/kamera/: Makefile  kalibrasi_kamera  kalibrasi_kamera.cpp
kalibrasi/kompas/: Makefile  kalibrasikompas.cpp
kalibrasi/lapangan/: index.html  server.py
kalibrasi/lapangan/lib/: jqueryui.css  jqueryui.js
logging/: log_2025-03-14.txt  log_2025-04-19.txt  log_2025-05-10.txt  log_2025-05-11.txt
ui/: camera_ui.glade  segmentation_ui2.glade
